# ricer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  build_and_install.sh  install.sh
src/: ConfigManager.cpp  ConfigManager.hpp  InstallManager.cpp  InstallManager.hpp  InstallRunner.cpp  InstallRunner.hpp  PackageManager.cpp  PackageManager.hpp  RicerRepo.cpp  RicerRepo.hpp  SyncManager.cpp  SyncManager.hpp  commands.cpp  commands.hpp  config.cpp  config.hpp  main.cpp
